unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/CMPL123TMS__Training_Record__c.object-meta.xml
<CustomObject>
    <description>Training Record</description>
    <label>Training Record</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Training Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>