unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Bookmark__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Bookmark__c</fullName>
        <label>Bookmark</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>