unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Change_Justification__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Change_Justification__c</fullName>
        <description>Change Justification</description>
        <inlineHelpText>Change Justification</inlineHelpText>
        <label>Change Justification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reason1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>