unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Completed_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Completed_Date__c</fullName>
        <description>Completed Date</description>
        <inlineHelpText>Completed Date</inlineHelpText>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </CustomField>