unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Content_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Content_Type__c</fullName>
        <label>Content Type</label>
        <type>TextArea</type>
    </CustomField>