unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__ContentVersion_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__ContentVersion_Id__c</fullName>
        <description>Feed file Related Record Id(contentVersionId)</description>
        <inlineHelpText>Feed file Related Record Id(contentVersionId)</inlineHelpText>
        <label>ContentVersion Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>