unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Due_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </CustomField>