unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Instructor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Training Records</relationshipLabel>
        <relationshipName>Training_Records</relationshipName>
        <type>Lookup</type>
    </CustomField>