unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_Active_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Active_User__c</fullName>
        <formula>CMPL123TMS__Related_User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active User</label>
        <type>Checkbox</type>
    </CustomField>