unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_Adhoc__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Adhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Adhoc</description>
        <inlineHelpText>Is Adhoc</inlineHelpText>
        <label>Is Adhoc</label>
        <type>Checkbox</type>
    </CustomField>