unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_Created_Before_Vacation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Created_Before_Vacation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Created Before Vacation with out  user vacation end date</description>
        <inlineHelpText>Is Created Before Vacation with out  user vacation end date</inlineHelpText>
        <label>Is Created Before Vacation</label>
        <type>Checkbox</type>
    </CustomField>