unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_Exist__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Library Item Exist</description>
        <inlineHelpText>Is Library Item Exist</inlineHelpText>
        <label>Is Exist</label>
        <type>Checkbox</type>
    </CustomField>