unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_Logged_In_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Logged_In_User__c</fullName>
        <formula>if(CMPL123TMS__Related_Course_Offering__r.CMPL123TMS__Instructor__r.Id == $User.Id , True ,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Logged In User</label>
        <type>Checkbox</type>
    </CustomField>