unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_New_Hire__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_New_Hire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is New Hire</description>
        <inlineHelpText>Is New Hire</inlineHelpText>
        <label>Is New Hire</label>
        <type>Checkbox</type>
    </CustomField>