unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_Reoccurring__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Reoccurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Reoccurring</description>
        <inlineHelpText>Is Reoccurring</inlineHelpText>
        <label>Is Reoccurring</label>
        <type>Checkbox</type>
    </CustomField>