unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_Retraining__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Retraining__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Retraining</description>
        <inlineHelpText>Is Retraining</inlineHelpText>
        <label>Is Retraining</label>
        <type>Checkbox</type>
    </CustomField>