unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Is_Retraining_Created__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Retraining_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Retraining Created</description>
        <inlineHelpText>Is Retraining Created</inlineHelpText>
        <label>Is Retraining Created</label>
        <type>Checkbox</type>
    </CustomField>