unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Previous_Revision_Trainingrecord_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Previous_Revision_Trainingrecord_Id__c</fullName>
        <description>It stores the previous revision training record id.</description>
        <inlineHelpText>It stores the previous revision training record id.</inlineHelpText>
        <label>Previous Revision Trainingrecord Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>