unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Reason_for_Due_Date_Change__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Reason_for_Due_Date_Change__c</fullName>
        <label>Reason for Due Date Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Maternity</fullName>
                </value>
                <value>
                    <fullName>Jury Duty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>