unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Related_Course_Offering__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Course Offering</description>
        <inlineHelpText>Related Course Offering</inlineHelpText>
        <label>Related Course Offering</label>
        <referenceTo>CMPL123TMS__Course_Offering__c</referenceTo>
        <relationshipLabel>Training Records</relationshipLabel>
        <relationshipName>Training_Records</relationshipName>
        <type>Lookup</type>
    </CustomField>