unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Related_Training_Plan_Id_s__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_Training_Plan_Id_s__c</fullName>
        <description>Related Training Plan Id's</description>
        <inlineHelpText>Related Training Plan Id's</inlineHelpText>
        <label>Related Training Plan Id's</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>