unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Related_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related User/Trainee</description>
        <inlineHelpText>Related User</inlineHelpText>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Training Records (Related User)</relationshipLabel>
        <relationshipName>User_Training_Records</relationshipName>
        <type>Lookup</type>
    </CustomField>