unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Status__c</fullName>
        <formula>If(CMPL123TMS__Training_Status__c == 'Completed','Completed',If(NOT(ISBLANK(CMPL123TMS__Due_Date__c)) &amp;&amp; (CMPL123TMS__Training_Status__c == 'Assigned'|| CMPL123TMS__Training_Status__c == 'In Progress'), If(CMPL123TMS__Due_Date__c &lt; TODAY(),'Past Due','Pending'),''))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </CustomField>