unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Timeliness_Clock__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Timeliness_Clock__c</fullName>
        <formula>if(CMPL123TMS__Training_Status__c = "Completed" || CMPL123TMS__Training_Status__c = "Completed - No Impact" || CMPL123TMS__Training_Status__c ="Assigned" || CMPL123TMS__Training_Status__c ="In Progress", if(CMPL123TMS__Due_Date__c &lt; DATEVALUE(IF ( ISNULL(CMPL123TMS__Completed_Date__c),NOW(), CMPL123TMS__Completed_Date__c)), "Late", "On Time"), "Not Applicable")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timeliness Clock</label>
        <type>Text</type>
    </CustomField>