unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__TMS_Is_Related_Quiz_Complete__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__TMS_Is_Related_Quiz_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Quiz of related training Record complete</description>
        <inlineHelpText>Quiz of related training Record complete</inlineHelpText>
        <label>TMS Is Related Quiz Complete</label>
        <type>Checkbox</type>
    </CustomField>