unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Training_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Number__c</fullName>
        <description>Training Number</description>
        <inlineHelpText>Training Number</inlineHelpText>
        <label>Training Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>