unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Training_Plan_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Plan_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan Name</label>
        <referenceTo>CMPL123TMS__Training_Plan__c</referenceTo>
        <relationshipLabel>Training Records</relationshipLabel>
        <relationshipName>Training_Records</relationshipName>
        <type>Lookup</type>
    </CustomField>