unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Training_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Status__c</fullName>
        <label>Training Status</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>