unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/fields/CMPL123TMS__Version__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Version__c</fullName>
        <label>Version</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>