unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/listViews/CMPL123TMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123TMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123TMS__Related_Library__c</columns>
        <columns>CMPL123TMS__Training_Status__c</columns>
        <columns>CMPL123TMS__Related_User__c</columns>
        <columns>CMPL123TMS__Is_Adhoc__c</columns>
        <columns>CMPL123TMS__ContentVersion_Id__c</columns>
        <columns>CMPL123TMS__Training_Name__c</columns>
        <columns>CMPL123TMS__Training_Plan_Name__c</columns>
        <columns>CMPL123TMS__Version__c</columns>
        <columns>CMPL123TMS__Related_Course_Offering__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>