unpackaged/main/default/objects/CMPL123TMS__Training_Record__c/listViews/CMPL123TMS__All1.listView-meta.xml
<ListView>
        <fullName>CMPL123TMS__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>